# NeuroLib

./: CMakeLists.txt  CMakeSettings.json  dataset100.csv  dataset1000.csv  dataset_test.csv  empty_data.csv  main.cpp
NeuroLib/: NeuroLib.cpp  NeuroLib.h
NeuroLib/Network/: Network.cpp  Network.h  PyNetwork.cpp
NeuroLib/Network/SimpleForwardNetwork/: PySimpleForwardNetwork.cpp  SimpleForwardNetwork.cpp  SimpleForwardNetwork.h
NeuroLib/Neuron/: Neuron.cpp  Neuron.h
NeuroLib/Signal/: Signal.cpp  Signal.h
NeuroLib/SimpleForwardNetwork/: PySimpleForwardNetwork.cpp  SimpleForwardNetwork.cpp  SimpleForwardNetwork.h
NeuroLib/Synapse/: Synapse.cpp  Synapse.h
NeuroLib/World/: PyWorld.cpp  World.cpp  World.h
